# liblustre

./: Doxyfile  GITHASH.in  Makefile.am  README  README.convert.rst  README.md  README.tests  configure.ac  liblustre.spec  liblustre.spec.in
include/: Makefile.am
include/lustre/: liblustre_user.h  lustre.h  lustre_user.h
lib/: Makefile.am  file.c  internal.h  kernel_user_comm.c  liblustre.c  liblustre.map  liblustre.pc.in  liblustre_file.c  liblustre_file2.c  liblustre_internal.h  liblustre_internal_gpl.h  liblustre_ioctls.c  liblustre_logging.c  liblustre_misc.c  liblustre_misc2.c  liblustre_osts.c  liblustre_params.c  liblustre_support.c  liblustreapi_hsm.c  liblustreapi_json.c  liblustreapi_layout.c  logging.c  misc.c  osts.c  params.c  strings.c  support.c  support.h
man/: Makefile.am  liblustre.rst  llapi_create_volatile.rst  llapi_create_volatile_by_fid.rst  llapi_hsm_action_begin.rst  llapi_hsm_copytool_register.rst  llapi_hsm_copytool_unregister.3  llapi_stat_by_fid.rst  lus_close_fs.3  lus_create_volatile_by_fid.rst  lus_hsm_action_begin.rst  lus_hsm_action_get_fd.3  lus_hsm_copytool_register.rst  lus_mdt_stat_by_fid.rst  lus_open_fs.rst  lus_stat_by_fid.rst
tests/: Makefile.am  check_extra.h  group_lock_test.c  group_lock_test.sh  lhsmtool_posix.c  lib_test.c  lib_test.h  lib_test.sh  liblustre_file2_tests.c  liblustre_misc2_tests.c  liblustre_misc_tests.c  liblustre_osts_tests.c  liblustre_params_tests.c  llapi_fid_test.c  llapi_fid_test.sh  llapi_hsm_test.c  llapi_hsm_test.sh  llapi_layout_test.c  llapi_layout_test.sh  posixct.c  support.c  support.h  test_file.c  test_misc.c  test_osts.c  test_params.c  test_support.c  valgrind.supp
